syntax = "proto3";

package io.mystore.order.entity;

import "google/protobuf/timestamp.proto";

message OrderItemState {
  string customer_id = 1;
  string order_id = 2;
  string sku_id = 3;
  string sku_name = 4;
  string sku_item_id = 5;
  int32 quantity = 6;
  google.protobuf.Timestamp ordered_utc = 7;
  google.protobuf.Timestamp shipped_utc = 8;
}
